# pyobf2

./: .gitignore  LICENSE  README.md  api_example.py  main.py  pyproject.toml  requirements.txt
examples/api/batch/: main.py
examples/api/single/: main.py
obfuscator/: __init__.py  __main__.py  assembler.py  cfg.py  collector.py  constructDynamicCodeObjTransformer.py  encodeStringsTransformer.py  fstrToFormatTransformer.py  intObfuscatorTransformer.py  main.py  memberRenamerTransformer.py  removeTypeHintsTransformer.py  renamer.py  replaceAttribsTransformer.py  transformers.py  util.py
obfuscator/libchecker/: __init__.py
obfuscator/transformers/: __init__.py  collector.py  compileFinalFiles.py  constructDynamicCodeObjTransformer.py  encodeStringsTransformer.py  fstrToFormatTransformer.py  intObfuscatorTransformer.py  memberRenamerTransformer.py  packPyz.py  removeTypeHintsTransformer.py  replaceAttribsTransformer.py  unicodeNameTransformer.py
pyobf2/: __init__.py  __main__.py
pyobf2/lib/: __init__.py  cfg.py  log.py  renamer.py  util.py
pyobf2/lib/transformers/: __init__.py  collector.py  compileFinalFiles.py  constructDynamicCodeObjTransformer.py  encodeStringsTransformer.py  floatsToComplex.py  intObfuscatorTransformer.py  logicTransformer.py  memberRenamerTransformer.py  packPyz.py  replaceAttribsTransformer.py  stringCollectorTransformer.py  typeAliasTransformer.py  unicodeNameTransformer.py
src/: api_example.py
src/pyobf2/: __main__.py
src/pyobf2/lib/: __init__.py  util.py
test/: input1.py  input2.py  input4.py
(+11 files in other folders)
